objects/LLC_BI__Collateral_Valuation__c.object
<CustomObject>
    <description>Something pledged as security for repayment of a loan, to be forfeited in the event of a default.</description>
    <fields>
        <fullName>LLC_BI__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A boolean field used to indicated which valuation(s) are active (true) or inactive (false). This would be entered by the user when a new valuation is entered. Default value is false.</description>
        <inlineHelpText>Indicates if a valuation is active or inactive</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Type_SubType__c</fullName>
        <description>A text field used to indicate the Type and Sub Type</description>
        <label>Collateral Type-SubType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral__c</fullName>
        <description>This reference field is optional and specifies the collateral valuation. It is manually populated.</description>
        <label>Collateral</label>
        <referenceTo>LLC_BI__Collateral__c</referenceTo>
        <relationshipLabel>Collateral Valuations</relationshipLabel>
        <relationshipName>Collateral_Valuation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Comments__c</fullName>
        <description>Comments specific to collateral valuation. This would be entered by the user when a new valuation is entered.</description>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A boolean field used to indicated which valuation is considered the primary valuation (true). This would be entered by the user when a new valuation is entered. No default value.</description>
        <inlineHelpText>Indicates the primary valuation for the collateral</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Source__c</fullName>
        <description>A picklist field used to capture the source of the collateral valuation. This would be entered by the user when a new valuation is entered. No default value.</description>
        <inlineHelpText>The source of the collateral valuation</inlineHelpText>
        <label>Valuation Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Balance / Statement</fullName>
                </value>
                <value>
                    <fullName>Appraisal</fullName>
                </value>
                <value>
                    <fullName>Credit Officer</fullName>
                </value>
                <value>
                    <fullName>Financial Statement</fullName>
                </value>
                <value>
                    <fullName>Insurance Agent</fullName>
                </value>
                <value>
                    <fullName>Internal Valuation</fullName>
                </value>
                <value>
                    <fullName>Inventory Report</fullName>
                </value>
                <value>
                    <fullName>Invoice / Bill of Sale</fullName>
                </value>
                <value>
                    <fullName>Real Estate Abundance of Caution</fullName>
                </value>
                <value>
                    <fullName>Receivables Aging</fullName>
                </value>
                <value>
                    <fullName>Real Estate Evaluation</fullName>
                </value>
                <value>
                    <fullName>Real Estate Restricted Appraisal</fullName>
                </value>
                <value>
                    <fullName>Third Party Source</fullName>
                </value>
                <value>
                    <fullName>Valuation Service Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Type__c</fullName>
        <description>A picklist field used to capture the type of the collateral valuation. This would be entered by the user when a new valuation is entered. No default value.</description>
        <inlineHelpText>The type of the collateral valuation</inlineHelpText>
        <label>Valuation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Actual Cash Value</fullName>
                </value>
                <value>
                    <fullName>As Complete Value</fullName>
                </value>
                <value>
                    <fullName>As Is Value</fullName>
                </value>
                <value>
                    <fullName>As Stabilized Value</fullName>
                </value>
                <value>
                    <fullName>Balance Sheet</fullName>
                </value>
                <value>
                    <fullName>Book Value</fullName>
                </value>
                <value>
                    <fullName>Cash Balance</fullName>
                </value>
                <value>
                    <fullName>Contents Value</fullName>
                </value>
                <value>
                    <fullName>Fair Market Value - Real Estate</fullName>
                </value>
                <value>
                    <fullName>Fair Market Value - Equipment / Transportation</fullName>
                </value>
                <value>
                    <fullName>Net Orderly Liquidation Value</fullName>
                </value>
                <value>
                    <fullName>Orderly Liquidation Value</fullName>
                </value>
                <value>
                    <fullName>Preliminary Value</fullName>
                </value>
                <value>
                    <fullName>Purchase Price</fullName>
                </value>
                <value>
                    <fullName>Replacement Cost Value</fullName>
                </value>
                <value>
                    <fullName>Waived Value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Valuation_Date__c</fullName>
        <description>A date field used to capture the date of a collateral valuation. This would be entered by the user when a new valuation is entered. No default value.</description>
        <inlineHelpText>The date of the collateral valuation</inlineHelpText>
        <label>Valuation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Valuation_Description__c</fullName>
        <description>A text field used to indicate the Valuation Description</description>
        <label>Valuation Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Valuation_Details__c</fullName>
        <description>The system automatically populates this mandatory field with the vehicle detail IDs received from the relevant vehicle valuations integration.</description>
        <inlineHelpText>This system-populated field automatically populates with vehicle detail IDs received from the relevant vehicle valuations integration.</inlineHelpText>
        <label>Valuation Details</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Value__c</fullName>
        <description>A currency field used to capture the value of the collateral. This would be entered by the user when a new valuation is entered.</description>
        <inlineHelpText>Used to capture the value of the collateral</inlineHelpText>
        <label>Collateral Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Collateral Valuation</label>
    <nameField>
        <displayFormat>CV-{0000000000}</displayFormat>
        <label>Collateral Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collateral Valuations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>